# basic-learning

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_EN.md  build_xj3.sh  conanfile.py
src/: CMakeLists.txt
src/algo_and_ds/: CMakeLists.txt  binary_search_tree.hpp  common_utils.hpp  dense_graph.hpp  index_max_heap.hpp  sort_helper.hpp  sparse_graph.hpp  test_heap_sort.cc  test_merge_sort.cc
src/binary_search_tree/: binary_search_tree.hpp
src/common/: CMakeLists.txt  bl_version.hpp  version.hpp
src/concurrency/: CMakeLists.txt  async_quick_sort.hpp  gui_packaged_task.hpp  main_threadsafe_queue.cc  main_tq.cc  parallel_accumulate.hpp  parallel_accumulate_exception_safe.hpp  parallel_for_each.hpp  parallel_for_find.hpp  parallel_partial_sum.hpp  queue.hpp  sequential_quick_sort.hpp  simple_thread_pool.hpp  test_accumulate.cc  test_packaged_task.cc  test_parallel_for_each.cc  test_parallel_for_find.cc  test_parallel_partial_sum.cc  test_parallel_quick_sort.cc  test_quick_sort.cc  test_quick_sort_api.cc  test_threadsafe_queue.cc  test_ts_queue.cc  thread_pool.hpp  thread_pool_quick_sort.hpp  thread_safe_queue.hpp  threadsafe_list.hpp  threadsafe_lookup_table.hpp  threadsafe_queue.hpp  threadsafe_queue_fg.hpp  threadsafe_stack.hpp  utils.hpp
src/concurrent/: CMakeLists.txt  safe_vector.h
src/cuda_demo/: 001_img_process.py  002_matmul.py  CMakeLists.txt  array_sum.cu  cublas_base.cu  cuda_helper.hpp  double_stream.cu  global_add_vector.cu  matrix_mul.cu  single_stream.cu  vector_add.cu
src/cuda_op/: CMakeLists.txt  array_sum.cu  array_sum.cuh  common_macro.hpp  cuda_helper.cuh  matrix_mul.cu  matrix_mul.cuh  vector_add.cu  vector_add.cuh
src/cv_process/: CMakeLists.txt  contour_measure.cpp  contour_measure.hpp  measure_types.hpp  pw_locator.cpp  pw_locator.hpp  pw_sampler.cpp  pw_sampler.hpp  seg_ret_postprocess.cpp  seg_ret_postprocess.hpp  vessel_types.hpp
src/design_pattern/: CMakeLists.txt  test_factory.cc
src/dummy/: dummy.cpp  dummy.hpp
src/dynamic_load/: CMakeLists.txt  my_add.cpp  test_dynamic_load.cc
src/features/: CMakeLists.txt  alias_template.hpp  params_center.hpp  perfect_forward.hpp  test_params_center.cc  using_decltype.hpp
src/graph/: adj_matrix.cpp  adj_matrix.hpp  bellman_ford_sp.hpp  bfs_path.hpp  cc.hpp  connected_path.hpp  dfs.hpp  graph.cpp  graph.hpp  weighted_dense_graph.hpp  weighted_edge.hpp
src/heap/: index_max_heap.hpp  min_heap.hpp
src/infer/: CMakeLists.txt  dnn_infer.cpp  dnn_infer.hpp  infer.cpp  infer.hpp  infer_types.hpp  infer_wrapper.hpp  rtmDet.cpp  rtmDet.hpp  rtm_det.cpp  rtm_det.hpp  vision.hpp  vision_util.cpp  vision_util.hpp  yoloDet.cpp  yoloDet.hpp
src/ip2region/: CMakeLists.txt  xdb_bench.cpp  xdb_bench_test.cc  xdb_search.cpp  xdb_search.h  xdb_search_test.cc
src/leetcode/: 102_binary_tree_level_order_traversal.cc  104_max_depth.cc  112_path_sum.cc  11_container_with_most_water.cc  144_binary_tree_preorder_traversal.cc  18_4sum.cc  1_two_sum.cc  202_happy_number.cc  203_remove_linked_list_elements.cc  205_isomorphic_strings.cc  206_reverse_linked_list.cc  209_min_size_subarray_sum.cc  20_valid_parentheses.cc  215_kth_largest_element.cc  21_merge_two_sorted_lists.cc  220_contains_duplicate_III.cc  226_invert_binary_tree.cc  242_valid_anagram.cc  25_reverse_nodes_in_kGroup.cc  26_remove_duplicates.cc  27_remove_element.cc  290_word_pattern.cc  328_odd_even_linked_list.cc  345_reverse_vowels.cc  349_intersection_two_arrays.cc  350_intersection_two_arrays_II.cc  438_find_all_anagrams.cc  447_number_of_boomerangs.cc  451_sort_chars_by_frequency.cc  454_4sum_II.cc  49_group_anagrams.cc  53_max_sub_array.cc  80_remove_duplicates_II.cc  82_remove_duplicates_sorted_list_II.cc  83_remove_duplicates.cc  86_partition_list.cc  88_merge_sorted_array.cc  92_reverse_linked_list_II.cc  94_binary_tree_inorder_traversal.cc  CMakeLists.txt  (+4 more)
src/linear_algebra/: CMakeLists.txt  common_utils.hpp  linear_systemp.hpp  matrix.hpp  practice_rotate_image.cc  test_linear_system.cc  test_matrix.cc  test_vector.cc  vector.hpp
src/lip_sync/: CMakeLists.txt  fbank.cpp  fbank.hpp  test_fbank.cc
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp  test_logger.cc
src/mysocket/: CMakeLists.txt  test_socket_client.cc  test_socket_server.cc
src/net_prog/: CMakeLists.txt  socket_ft_client.cc  socket_ft_server.cc  socket_server_demo.cc  tcp_socket.cpp  tcp_socket.hpp
src/oop/: CMakeLists.txt  test_factory.cc
src/op_system/: CMakeLists.txt  memory_model.hpp  sample_page_table.hpp  test_memory_model.cc  test_page_table.cc  test_sample_page_table.cc  test_two_stage_page_table.cc  two_stage_page_table.hpp
src/point_cloud/: CMakeLists.txt  test_heatmap.cc  test_pcl_filters.cc
src/practice/: CMakeLists.txt  unique_ptr.hpp
src/rule_applicator/: CMakeLists.txt  condition.hpp  condition_impl.cpp  condition_impl.hpp  test_polarity.cc  type.hpp
src/safe_vector/: CMakeLists.txt  safe_vector.h
src/sort/: insert_sort.hpp
src/template_mp/: CMakeLists.txt  test_alias_template.cc  test_decltype.cc  test_forward.cc
src/use_taskflow/: CMakeLists.txt  test_taskflow.cc
src/utils/: CMakeLists.txt  base_type_convert.hpp  complexity_analyzer.hpp  mexception.hpp  time_utils.hpp
tests/: CMakeLists.txt  test_add_weighted.cc  test_constructor.cpp  test_contour_measure.cc  test_dummy.cpp  test_factory.cpp  test_forward.cpp  test_gen_identity.cc  test_gflags.cpp  test_graph_cc.cpp  test_graph_dfs.cpp  test_graph_path.cpp  test_graph_repr.cpp  test_httplib.cpp  test_logger.cpp  test_macro.cpp  test_ncnn_rtm_det.cpp  test_nlohmann.cpp  test_onnx_yolov11.cpp  test_power.cc  test_pw_gate.cc  test_rapidxml.cpp  test_rtm_det.cpp  test_seg_postproces.cc  test_sort.cpp  test_sqlite3.cpp  test_variadic_templates.cpp  test_yolov11.cpp
tests/binary_tree/: test_binary_search.cc  test_binary_search_tree.cc
tests/concurrency/: test_accumulate.cc  test_packaged_task.cc  test_parallel_for_each.cc  test_parallel_for_find.cc  test_parallel_partial_sum.cc  test_parallel_quick_sort.cc  (+2 more)
tools/: CMakeLists.txt  one_cli_tool.cc
(+174 files in other folders)
