CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

# submodule
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(utils)

ADD_SUBDIRECTORY(cv_process)

# transfer all headers to the include directory 
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR})

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
