CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

# submodule
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(utils)

IF(TARGET_OS STREQUAL Linux)
  ADD_SUBDIRECTORY(net_prog)
  ADD_SUBDIRECTORY(dynamic_load)
  ADD_SUBDIRECTORY(op_system)
ELSE()
  MESSAGE(FATAL_ERROR "Currently this module only supports Linux systems.")
ENDIF()

# transfer all headers to the include directory 
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR})

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
