CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

LOAD_OPENCV()
LOAD_GFLAGS()
LOAD_GTEST()
LOAD_OPENMP()

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
    ${PROJECT_INCLUDE_DIR}/infer
    ${CMAKE_INCLUDE_PATH}
)

SET(DEPENDENCY_LIBS
    infer
    opencv::opencv
    gflags::gflags
    gtest::gtest
    module_logger
)

IF(ENABLE_NCNN)
	LOAD_NCNN()
	LIST(APPEND DEPENDENCY_INCLUDES ${NCNN_INCLUDE_DIR})
	LIST(APPEND DEPENDENCY_LIBS ${OpenMP_CXX_FLAGS} ${NCNN_LIBS})
	ADD_COMPILE_OPTIONS(-fopenmp)
ENDIF()

IF(ENABLE_NCNN)
	LOAD_ONNXRUNTIME()
	LIST(APPEND DEPENDENCY_LIBS onnxruntime::onnxruntime)
ENDIF()

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
MESSAGE(STATUS "APP SOURCES: ${CURRENT_DIR_SRCS}")
ADD_EXECUTABLE(main ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(main PRIVATE ${DEPENDENCY_LIBS})
INSTALL(TARGETS main DESTINATION tests)

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data" DESTINATION .)
ENDIF()

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/models")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/models" DESTINATION .)
ENDIF()
