CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

LOAD_GFLAGS()
LOAD_GTEST()
LOAD_LOGURU()
LOAD_HTTPLIB()
LOAD_RAPIDJSON()
LOAD_SQLITE3()
LOAD_NLOHMANN()

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
    ${CMAKE_INCLUDE_PATH}
)

SET(DEPENDENCY_LIBS
    gflags::gflags
    gtest::gtest
    SQLite::SQLite3
    httplib::httplib
    nlohmann_json::nlohmann_json
    module_logger
)

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
MESSAGE(STATUS "APP SOURCES: ${CURRENT_DIR_SRCS}")
ADD_EXECUTABLE(main ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(main PRIVATE ${DEPENDENCY_LIBS})
INSTALL(TARGETS main DESTINATION tests)

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data" DESTINATION .)
ENDIF()
