CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tools)

LOAD_GFLAGS()

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
    ${CMAKE_INCLUDE_PATH}
)

SET(DEPENDENCY_LIBS
    logger::logger
    gflags::gflags
)

MESSAGE(STATUS "APP SOURCES: ${CURRENT_DIR_SRCS}")
FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tools)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tools)
FILE(GLOB_RECURSE APP_SOURCES *.cc)
MESSAGE(STATUS "APP SOURCES: ${APP_SOURCES}")
FOREACH(sourcefile ${APP_SOURCES})
    STRING(REGEX MATCH "[^/]+$" sourcefilewithoutpath ${sourcefile})
    STRING(REPLACE ".cc" "" testname ${sourcefilewithoutpath})
    ADD_EXECUTABLE( ${testname} ${sourcefile})
    TARGET_INCLUDE_DIRECTORIES(${testname} PRIVATE ${DEPENDENCY_INCLUDES})
    TARGET_LINK_LIBRARIES(${testname} PRIVATE ${DEPENDENCY_LIBS})
    INSTALL(TARGETS ${testname} DESTINATION tools)

ENDFOREACH(sourcefile ${APP_SOURCES})
