CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

LOAD_OPENCV()
LOAD_GFLAGS()
LOAD_GTEST()

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/cv_process)
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/cv_process COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
ADD_LIBRARY(cv_process ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(cv_process PRIVATE ${PROJECT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(cv_process PRIVATE module_logger)
