CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
# ADD_LIBRARY(desigin_pattern SHARED ${CURRENT_DIR_SRCS})
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
# TARGET_LINK_LIBRARIES(desigin_pattern pthread)

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/desigin_pattern)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/desigin_pattern COPYONLY)
ENDFOREACH()

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/desigin_pattern
    FILES_MATCHING
    PATTERN "*.h"
    PATTERN "*.hpp"
    PATTERN "CMakeLists.txt" EXCLUDE
    )

# INSTALL(TARGETS desigin_pattern
#     ARCHIVE DESTINATION lib
#     LIBRARY DESTINATION lib
#     RUNTIME DESTINATION bin)
