CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(infer)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

LOAD_OPENCV()
LOAD_NCNN()
LOAD_OPENMP()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/infer)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/infer COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(infer ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(infer PRIVATE ${PROJECT_INCLUDE_DIR} ${CMAKE_INCLUDE_PATH} ${NCNN_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(infer PRIVATE ${NCNN_LIBS} ${OpenMP_CXX_FLAGS} module_logger)
TARGET_COMPILE_OPTIONS(infer PRIVATE -fopenmp)
INSTALL(TARGETS infer DESTINATION lib)
