CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(infer)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

LOAD_OPENCV()
LOAD_OPENMP()

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
    ${PROJECT_INCLUDE_DIR}/infer
    ${CMAKE_INCLUDE_PATH}
)

SET(DEPENDENCY_LIBS
    opencv::opencv
    module_logger
)

IF(ENABLE_NCNN)
	LOAD_NCNN()
	LIST(APPEND DEPENDENCY_INCLUDES ${NCNN_INCLUDE_DIR})
	LIST(APPEND DEPENDENCY_LIBS ${OpenMP_CXX_FLAGS} ${NCNN_LIBS})
	ADD_COMPILE_OPTIONS(-fopenmp)
ENDIF()

IF(ENABLE_NCNN)
	LOAD_ONNXRUNTIME()
	LIST(APPEND DEPENDENCY_LIBS onnxruntime::onnxruntime)
ENDIF()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/infer)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/infer COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(infer ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(infer PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(infer PRIVATE ${DEPENDENCY_LIBS})
TARGET_COMPILE_OPTIONS(infer PRIVATE -fopenmp)
INSTALL(TARGETS infer DESTINATION lib)
