CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(lip_sync)

LOAD_GTEST()
LOAD_OPENCV()
LOAD_SNDFINE()
LOAD_KISSFFT()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/lip_sync)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/lip_sync COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_LIBRARY(fbank ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(fbank PRIVATE ${CMAKE_INCLUDE_PATH})
INSTALL(TARGETS fbank DESTINATION lib)

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/lip_sync)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/lip_sync)
FILE(GLOB APP_SOURCES *.cc)
MESSAGE(STATUS "APP SOURCES: ${APP_SOURCES}")
FOREACH(sourcefile ${APP_SOURCES})
    STRING(REGEX MATCH "[^/]+$" sourcefilewithoutpath ${sourcefile})
    STRING(REPLACE ".cc" "" testname ${sourcefilewithoutpath})
    ADD_EXECUTABLE( ${testname} ${sourcefile})
    TARGET_INCLUDE_DIRECTORIES(${testname} PRIVATE ${PROJECT_INCLUDE_DIR}/lip_sync ${CMAKE_INCLUDE_PATH})
    TARGET_LINK_LIBRARIES(${testname} PRIVATE fbank SndFile::sndfile kissfft::kissfft opencv::opencv gtest::gtest)

    INSTALL(TARGETS ${testname} DESTINATION bin/lip_sync)
ENDFOREACH(sourcefile ${APP_SOURCES})
